# summit_xl_common

summit_xl_control/: CMakeLists.txt
summit_xl_control/config/: twist_mux.yaml
summit_xl_control/config/simulation/: robot_control.yaml
summit_xl_description/meshes/bases/xls/: summit_xls_chassis_ch.dae
summit_xl_description/robots/: summit_xls_std.urdf.xacro
summit_xl_description/urdf/bases/: summit_xls_base.urdf.xacro
summit_xl_localization/config/: slam_gmapping.yaml
summit_xl_localization/maps/: exproom_test.pgm  exproom_test.yaml
summit_xl_localization/maps/exp_room/: 2105_exp_room.pgm  2105_exp_room.yaml
summit_xl_navigation/: package.xml
summit_xl_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  teb_local_planner_omni_params.yaml
summit_xl_perception/: CMakeLists.txt
